# microcnf

./: meson.build  microcnf.c
